Removed lingering BlueBall example.

--- a/packages/docs/docs/sequence.mdx
+++ b/packages/docs/docs/sequence.mdx
@@ -85,7 +85,7 @@ const TrimAndDelayExample: React.FC = () => {
   return (
     <Sequence from={30} durationInFrames={Infinity}>
       <Sequence from={-15} durationInFrames={Infinity}>
-        <BlueBall></BlueBall>
+        <BlueSquare />
       </Sequence>
     </Sequence>
   );
