--- a/packages/docs/docs/sequence.mdx
+++ b/packages/docs/docs/sequence.mdx
@@ -41,9 +41,7 @@ All the examples below are based on the following animation of a blue square:
 // @include: example-BlueSquare
 // ---cut---
 const MyVideo = () => {
-  return (
-    <BlueSquare />
-  );
+  return <BlueSquare />
 }
 ```
 
@@ -56,14 +54,14 @@ If you would like to delay the content by say 30 frames, you can wrap it in <br/
 
 ```tsx twoslash
 // @include: example-BlueSquare
-import {Sequence} from "remotion";
+import {Sequence} from 'remotion'
 // ---cut---
 const MyVideo = () => {
   return (
     <Sequence from={30} durationInFrames={Infinity}>
       <BlueSquare />
     </Sequence>
-  );
+  )
 }
 ```
 
@@ -92,7 +90,7 @@ You need to wrap the videos in two sequences. To the inner one we pass a negativ
 
 ```tsx twoslash
 // @include: example-BlueSquare
-import {Sequence} from "remotion";
+import {Sequence} from 'remotion'
 // ---cut---
 const TrimAndDelayExample: React.FC = () => {
   return (
@@ -101,8 +99,8 @@ const TrimAndDelayExample: React.FC = () => {
         <BlueSquare />
       </Sequence>
     </Sequence>
-  );
-};
+  )
+}
 ```
 
 ## See also
